# claudeWannaBe

./: .gitignore  FutureCapabilities.md  LLMDocumentation.md  README.md  implement-slash-commands-prompt.md  implement-tools-prompt.md  integrate-slash-commands-prompt.md  pyproject.toml  slash_commands.py  tool-suggestions.md
agent/: __init__.py
agent/cli/: __init__.py  main.py
agent/cli/commands/: __init__.py  ask.py  chat.py  exec_cmd.py  index_cmd.py  run_cmd.py  search_cmd.py  slash_commands.py  ssh_cmd.py
agent/config/: settings.toml
agent/core/: colors.py  config.py  conversation.py  llm_client.py  logging_utils.py  memory.py  planner.py  safety.py
agent/rag/: chunk.py  embed.py  index.py  search.py
agent/tools/: file_ops.py  git_tools.py  python_exec.py  registry.py  shell.py  web_search.py
data/sessions/: session-20251122-091748.jsonl  session-20251122-093425.jsonl  session-20251122-093834.jsonl
