[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jay-agent"
version = "0.1.0"
description = "CLI agent for Jay"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.8.0",
    "faiss-cpu>=1.13.0",
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
]

[project.scripts]
jay-agent = "agent.cli.main:main"

[tool.setuptools.packages.find]
include = ["agent*"]
